FIX BUG: Text align to left for task by putting text align at the task div

--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,7 @@
   text-overflow: ellipsis;
   border-left: 3px solid transparent; 
   background-color: transparent;
+    text-align: left;
 }
 
 
